bizinikiwi/pezframe/support/test/tests/pezpallet_ui/view_function_invalid_item.stderr
error: Invalid pezpallet::view_functions, expected a function
  --> tests/pezpallet_ui/view_function_invalid_item.rs:30:3
   |
30 |         pub const SECONDS_PER_MINUTE: u32 = 60;
   |         ^^^
